--- a/src/styles/indexltr.css
+++ b/src/styles/indexltr.css
@@ -919,7 +919,7 @@ input[type="submit"] {
   display: block;
 }
 input[type="submit"] {
-  width: calc(100% - 20px);
+  width:100% ;
 }
 .basket {
   display: inline-block;
@@ -1148,9 +1148,9 @@ input[type="tel"] {
 }
 
 .validation-box{
-  text-align: center;
-  padding:0 !important;
-  margin:0 !important;
+  text-align: left;
+  margin-left:10px !important;
+  margin-bottom:15px
 }
 .error-validation{
   font-size:15px;
@@ -1164,3 +1164,7 @@ input[type="tel"] {
   border:1px solid var(--color-brand-primary) !important;
 }
 
+
+.leaflet-left .leaflet-control{
+  margin-top:70px !important
+}
